fixed some line height and letter spacing

--- a/styles/sass/partials/_projects.scss
+++ b/styles/sass/partials/_projects.scss
@@ -15,7 +15,8 @@
 
 .projectInfo {
     p {
-        line-height: 35px;
+        line-height: 40px;
+        letter-spacing: 2px;
     }
     a {
         font-size: 1.2rem;
